--- a/templates/confirmed_payment.html
+++ b/templates/confirmed_payment.html
@@ -38,7 +38,7 @@
 
           <div id="purchase-value">
             <img src="{{ url_for('static', filename='template_img/tag.svg') }}" alt="Ícone de tag" />
-            <span>Compra de R$ <strong id="amount">287,90</strong></span>
+            <span>Compra de R$ <strong id="amount">{{ value }}</strong></span>
           </div>
         </aside>
       </header>
@@ -54,7 +54,7 @@
           <small>O número do seu pedido é</small>
           <div>
             <img src="{{ url_for('static', filename='template_img/basket.svg') }}" alt="Ícone do pedido" />
-            <span>527485022</span>
+            <span>{{ payment_id }}</span>
           </div>
         </div>
       </footer>
